# django-getting-started

./: .gitignore  pyproject.toml
meeting_planner/meeting_planner/: settings.py  urls.py
meeting_planner/meetings/: models.py  urls.py  views.py
meeting_planner/meetings/migrations/: 0001_initial.py
meeting_planner/meetings/templates/meetings/: detail.html  new.html  rooms.html
meeting_planner/website/: views.py
meeting_planner/website/templates/: base.html
meeting_planner/website/templates/website/: welcome.html
tests/: test_django_getting_started.py
