[tool.poetry]
name = "django-getting-started"
version = "0.1.0"
description = ""
authors = ["Lance Johnson <rlancejohnson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
